--- a/index.html
+++ b/index.html
@@ -8,42 +8,62 @@
 
 
 <script type="text/javascript">
-	//initialize stuff...
-	
-	x = 0;
-	y = 5;
-	dx = .01;
-	limit = 10;
-	
-	var euler = {label: "Euler's Estimation", data: []};
-	var graph_f = [];
-	
-	f = function f(input) {
-		return Math.exp(input);
-	}
+	//initial conditions
+	var x_initial = 0;
+	var y_initial = 2;
 	//
+	var limit = 1000;
 	
-	//for (n=1; n<=limit; n++) {
-	dx = 0.1;
-
-		//
-		for (i=1;i<=limit;i++) {
-			m = f(i);
+	//arrays to hold data points
+	var euler1 = {label: "Euler's Estimation (dx = .05)", data: []};
+	var euler2 = {label: "Euler's Estimation (dx = .10)", data: []};
+	var euler3 = {label: "Euler's Estimation (dx = .15)", data: []};
+	var euler4 = {label: "Euler's Estimation (dx = .20)", data: []};
+	var euler5 = {label: "Euler's Estimation (dx = .25)", data: []};
+	var graph_f = {label: "Original Function", data: []}; //original function
+	
+	//define two functions: dy/dx as a function of x and y (differential equation) and y as a function of x (original function)
+	f_prime = function f_prime(x, y) {
+		return Math.pow(x,2)/Math.pow(y,2); //differential equation is dy/dx = x^2/y^2
+	}
+	
+	f_original = function f_original(x) {
+		var under_cube_root = Math.pow(x,3) + 8; //x cubed plus 8
+		return Math.pow(under_cube_root, 1/3); //cube root of above
+	}
+	
+	//graph original function
+	i=0
+	while(i<=1) {
+		graph_f.data.push([i, f_original(i)]); //draw graph
+		i = i+.01;
+	}
+	
+			
+	for (k=1;k<=5;k++) {
+		dx = k*.05;
+		euler = "euler" + k;
+		console.log(euler);
+		for (i=0;i<=limit;i++) {
+			
+			if(i === 0) {
+				x = x_initial;
+				y = y_initial;
+			}
+			
+			m = f_prime(x, y);
 			x = dx + x;
 			y = y + m*dx;
-			euler.data.push([x,y]);
-			
-		graph_f.push([i, f(i)]);
-
+			eval(euler).data.push([x,y]);
 		}
-	//}
+	}
 	
 </script>
 </head>
 
 <body>
 
-<div id="graph" style="width:100%;height:800px"></div>
+<div id="graph" style="width:100px;height:100px"></div>
 
 
 </body>
@@ -52,18 +72,28 @@
 $(function () {
 	var options = {
 		yaxis: {
-		//	max: 300,	
+			max: 2.08,	
 		},
 		xaxis: {
-			
+			max: 1	
 		},
 		series: {
             lines: { show: true, lineWidth: 2 },
-			points: { show: true, radius: 0 },
+			points: { show: true, radius: 2 },
 			shadowSize: 1,
         },
+        legend: {
+        	show: true,
+        	position: 'nw',
+        }
 	}
-	$.plot($("#graph"), [ euler ], options);
+	
+	
+	width = $(window).width();
+	height = $(window).height();	
+	
+	$('#graph').width(width - 50).height(height - 25);	
+	$.plot($("#graph"), [ graph_f, euler1, euler2, euler3, euler4, euler5 ], options);
 });
 </script>
 </html>
